# crypto-debt-scanner

./: README.md  patterns.json  pyproject.toml  scanner.py
.github/workflows/: ci.yml
crypto_debt_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_scanner.py
