[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-debt-scanner"
version = "0.3.0"
authors = [
    { name="Jack Uval", email="hello@jackuval.xyz" },
]
description = "A simple CLI tool to scan codebases for outdated and vulnerable cryptographic patterns."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Software Development",
]

[project.urls]
"Homepage" = "https://github.com/jack-uval/crypto-debt-scanner"
"Bug Tracker" = "https://github.com/jack-uval/crypto-debt-scanner/issues"

[project.scripts]
crypto-debt-scanner = "scanner:main"
